--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,14 +7,14 @@ lint:
   name: yamllint
 platforms:
   - name: instance
-    image: centos:7
+    image: lborguetti/fedora-systemd
+    privileged: true
+    log: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
   name: default
-verifier:
-  name: goss
-  lint:
-    name: yamllint
